--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Azai Stats</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="top-bar">
-        <div class="logo-container">
-            <img src="logo.png" alt="Logo" class="logo">
-        </div>
-        <nav class="navigation">
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="data.html" class="nav-link">Data</a>
-        </nav>
+      <div class="logo-container">
+        <img src="logo.png" alt="Logo" class="logo" />
+      </div>
+      <nav class="navigation">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="data.html" class="nav-link">Data</a>
+      </nav>
     </div>
 
-    <p>This is a paragraph.</p>
-</body>
+    <div class="intro-section">
+      <h1>Hey! I'm Azai, and welcome to my website!</h1>
+      <h2>
+        I'm a statistics-based
+        <a class="link" href="https://www.youtube.com/@AzaiStats">YouTuber</a>
+        interested in making data more available to the general public.
+      </h2>
+      <h2>
+        Here you can find
+        <a class="link" href="data.html">data</a> and more!
+      </h2>
+    </div>
+  </body>
 </html>
