--- a/data.html
+++ b/data.html
@@ -19,13 +19,14 @@
 
     <div class="content">
       <div class="hero">
-        <h1>Data Page Beta</h1>
+        <h1>Data Page</h1>
       </div>
 
       <div class="data-section">
         <h2>Explore Data</h2>
+        <p> Here is where we store our data.</p>
         <div class="button-container">
-          <button id="183" class="styled-button">183Club</button>
+          <button id="183c" class="styled-button">183Club</button>
           <button id="smosh" class="styled-button">Smosh</button>
         </div>
       </div>
@@ -33,7 +34,7 @@
 
     <script type="text/javascript">
       document.addEventListener("DOMContentLoaded", function () {
-        document.getElementById("183").onclick = function () {
+        document.getElementById("183c").onclick = function () {
             location.href = "data/183club.html";
         };
 
