--- a/data/smosh.html
+++ b/data/smosh.html
@@ -105,194 +105,194 @@
         { date: "10 Dec 2006", subscribers: 34643 },
         { date: "17 Dec 2006", subscribers: 35824 },
         { date: "24 Dec 2006", subscribers: 37037 },
-        { date: "31 Dec 2006", subscribers: 37952 },
-        { date: "07 Jan 2007", subscribers: 39853 },
-        { date: "14 Jan 2007", subscribers: 41910 },
-        { date: "21 Jan 2007", subscribers: 44183 },
-        { date: "28 Jan 2007", subscribers: 47308 },
-        { date: "04 Feb 2007", subscribers: 50371 },
-        { date: "11 Feb 2007", subscribers: 53847 },
-        { date: "18 Feb 2007", subscribers: 56053 },
-        { date: "25 Feb 2007", subscribers: 58670 },
-        { date: "04 Mar 2007", subscribers: 61463 },
-        { date: "11 Mar 2007", subscribers: 64145 },
-        { date: "18 Mar 2007", subscribers: 66348 },
-        { date: "25 Mar 2007", subscribers: 70559 },
-        { date: "01 Apr 2007", subscribers: 74381 },
-        { date: "08 Apr 2007", subscribers: 79104 },
-        { date: "15 Apr 2007", subscribers: 85607 },
-        { date: "22 Apr 2007", subscribers: 89423 },
-        { date: "29 Apr 2007", subscribers: 93085 },
-        { date: "06 May 2007", subscribers: 96158 },
-        { date: "13 May 2007", subscribers: 99792 },
-        { date: "20 May 2007", subscribers: 103237 },
-        { date: "27 May 2007", subscribers: 106559 },
-        { date: "03 Jun 2007", subscribers: 111874 },
-        { date: "10 Jun 2007", subscribers: 116306 },
-        { date: "17 Jun 2007", subscribers: 120275 },
-        { date: "24 Jun 2007", subscribers: 124169 },
-        { date: "01 Jul 2007", subscribers: 127551 },
-        { date: "08 Jul 2007", subscribers: 130879 },
-        { date: "15 Jul 2007", subscribers: 137106 },
-        { date: "22 Jul 2007", subscribers: 142025 },
-        { date: "29 Jul 2007", subscribers: 145457 },
-        { date: "05 Aug 2007", subscribers: 148992 },
-        { date: "12 Aug 2007", subscribers: 152455 },
-        { date: "19 Aug 2007", subscribers: 155412 },
-        { date: "26 Aug 2007", subscribers: 158501 },
-        { date: "02 Sep 2007", subscribers: 161903 },
-        { date: "09 Sep 2007", subscribers: 165023 },
-        { date: "16 Sep 2007", subscribers: 167679 },
-        { date: "23 Sep 2007", subscribers: 170589 },
-        { date: "30 Sep 2007", subscribers: 173365 },
-        { date: "07 Oct 2007", subscribers: 175885 },
-        { date: "14 Oct 2007", subscribers: 178164 },
-        { date: "21 Oct 2007", subscribers: 180894 },
-        { date: "28 Oct 2007", subscribers: 183890 },
-        { date: "04 Nov 2007", subscribers: 187091 },
-        { date: "11 Nov 2007", subscribers: 190175 },
-        { date: "18 Nov 2007", subscribers: 194001 },
-        { date: "25 Nov 2007", subscribers: 198470 },
-        { date: "02 Dec 2007", subscribers: 202190 },
-        { date: "09 Dec 2007", subscribers: 206029 },
-        { date: "16 Dec 2007", subscribers: 210313 },
-        { date: "23 Dec 2007", subscribers: 214478 },
-        { date: "30 Dec 2007", subscribers: 218541 },
-        { date: "06 Jan 2008", subscribers: 222425 },
-        { date: "13 Jan 2008", subscribers: 228517 },
-        { date: "20 Jan 2008", subscribers: 234098 },
-        { date: "27 Jan 2008", subscribers: 239288 },
-        { date: "03 Feb 2008", subscribers: 245841 },
-        { date: "10 Feb 2008", subscribers: 253118 },
-        { date: "17 Feb 2008", subscribers: 258544 },
-        { date: "24 Feb 2008", subscribers: 267842 },
-        { date: "02 Mar 2008", subscribers: 273628 },
-        { date: "09 Mar 2008", subscribers: 282155 },
-        { date: "16 Mar 2008", subscribers: 289636 },
-        { date: "23 Mar 2008", subscribers: 296642 },
-        { date: "30 Mar 2008", subscribers: 307538 },
-        { date: "06 Apr 2008", subscribers: 315504 },
-        { date: "13 Apr 2008", subscribers: 323892 },
-        { date: "20 Apr 2008", subscribers: 332364 },
-        { date: "27 Apr 2008", subscribers: 340850 },
-        { date: "04 May 2008", subscribers: 347788 },
-        { date: "11 May 2008", subscribers: 357316 },
-        { date: "18 May 2008", subscribers: 365111 },
-        { date: "25 May 2008", subscribers: 369862 },
-        { date: "01 Jun 2008", subscribers: 378147 },
-        { date: "08 Jun 2008", subscribers: 385008 },
-        { date: "15 Jun 2008", subscribers: 392229 },
-        { date: "22 Jun 2008", subscribers: 401350 },
-        { date: "29 Jun 2008", subscribers: 410641 },
-        { date: "06 Jul 2008", subscribers: 419541 },
-        { date: "13 Jul 2008", subscribers: 427526 },
-        { date: "20 Jul 2008", subscribers: 435256 },
-        { date: "27 Jul 2008", subscribers: 445084 },
-        { date: "03 Aug 2008", subscribers: 458026 },
-        { date: "10 Aug 2008", subscribers: 468478 },
-        { date: "17 Aug 2008", subscribers: 477351 },
-        { date: "24 Aug 2008", subscribers: 489268 },
-        { date: "31 Aug 2008", subscribers: 499500 },
-        { date: "07 Sep 2008", subscribers: 508311 },
-        { date: "14 Sep 2008", subscribers: 515415 },
-        { date: "21 Sep 2008", subscribers: 525240 },
-        { date: "28 Sep 2008", subscribers: 538249 },
-        { date: "05 Oct 2008", subscribers: 550019 },
-        { date: "12 Oct 2008", subscribers: 563005 },
-        { date: "19 Oct 2008", subscribers: 571729 },
-        { date: "26 Oct 2008", subscribers: 578727 },
-        { date: "02 Nov 2008", subscribers: 585113 },
-        { date: "09 Nov 2008", subscribers: 591933 },
-        { date: "16 Nov 2008", subscribers: 597958 },
-        { date: "23 Nov 2008", subscribers: 605926 },
-        { date: "30 Nov 2008", subscribers: 616196 },
-        { date: "07 Dec 2008", subscribers: 623497 },
-        { date: "14 Dec 2008", subscribers: 632844 },
-        { date: "21 Dec 2008", subscribers: 644072 },
-        { date: "28 Dec 2008", subscribers: 655190 },
-        { date: "04 Jan 2009", subscribers: 666933 },
-        { date: "11 Jan 2009", subscribers: 674083 },
-        { date: "18 Jan 2009", subscribers: 682148 },
-        { date: "25 Jan 2009", subscribers: 691956 },
-        { date: "01 Feb 2009", subscribers: 699010 },
-        { date: "08 Feb 2009", subscribers: 706130 },
-        { date: "15 Feb 2009", subscribers: 713249 },
-        { date: "22 Feb 2009", subscribers: 722033 },
-        { date: "01 Mar 2009", subscribers: 732727 },
-        { date: "08 Mar 2009", subscribers: 739681 },
-        { date: "15 Mar 2009", subscribers: 748509 },
-        { date: "22 Mar 2009", subscribers: 757153 },
-        { date: "29 Mar 2009", subscribers: 764735 },
-        { date: "05 Apr 2009", subscribers: 772629 },
-        { date: "12 Apr 2009", subscribers: 781176 },
-        { date: "19 Apr 2009", subscribers: 791395 },
-        { date: "26 Apr 2009", subscribers: 800568 },
-        { date: "03 May 2009", subscribers: 809702 },
-        { date: "10 May 2009", subscribers: 815996 },
-        { date: "17 May 2009", subscribers: 826261 },
-        { date: "24 May 2009", subscribers: 832672 },
-        { date: "31 May 2009", subscribers: 839951 },
-        { date: "07 Jun 2009", subscribers: 849769 },
-        { date: "14 Jun 2009", subscribers: 863398 },
-        { date: "21 Jun 2009", subscribers: 874936 },
-        { date: "28 Jun 2009", subscribers: 886266 },
-        { date: "05 Jul 2009", subscribers: 897568 },
-        { date: "12 Jul 2009", subscribers: 903538 },
-        { date: "19 Jul 2009", subscribers: 921617 },
-        { date: "26 Jul 2009", subscribers: 931614 },
-        { date: "02 Aug 2009", subscribers: 943032 },
-        { date: "09 Aug 2009", subscribers: 953414 },
-        { date: "16 Aug 2009", subscribers: 965104 },
-        { date: "23 Aug 2009", subscribers: 991650 },
-        { date: "30 Aug 2009", subscribers: 1015483 },
-        { date: "06 Sep 2009", subscribers: 1038081 },
-        { date: "13 Sep 2009", subscribers: 1055267 },
-        { date: "20 Sep 2009", subscribers: 1065152 },
-        { date: "27 Sep 2009", subscribers: 1077306 },
-        { date: "04 Oct 2009", subscribers: 1087512 },
-        { date: "11 Oct 2009", subscribers: 1098034 },
-        { date: "18 Oct 2009", subscribers: 1109497 },
-        { date: "25 Oct 2009", subscribers: 1117923 },
-        { date: "01 Nov 2009", subscribers: 1128098 },
-        { date: "08 Nov 2009", subscribers: 1138463 },
-        { date: "15 Nov 2009", subscribers: 1147036 },
-        { date: "22 Nov 2009", subscribers: 1156270 },
-        { date: "29 Nov 2009", subscribers: 1165247 },
-        { date: "06 Dec 2009", subscribers: 1174547 },
-        { date: "13 Dec 2009", subscribers: 1184640 },
-        { date: "20 Dec 2009", subscribers: 1200702 },
-        { date: "27 Dec 2009", subscribers: 1215566 },
-        { date: "03 Jan 2010", subscribers: 1231747 },
-        { date: "10 Jan 2010", subscribers: 1243376 },
-        { date: "17 Jan 2010", subscribers: 1256227 },
-        { date: "24 Jan 2010", subscribers: 1271278 },
-        { date: "31 Jan 2010", subscribers: 1283078 },
-        { date: "07 Feb 2010", subscribers: 1294028 },
-        { date: "14 Feb 2010", subscribers: 1304635 },
-        { date: "21 Feb 2010", subscribers: 1316026 },
-        { date: "28 Feb 2010", subscribers: 1329281 },
-        { date: "07 Mar 2010", subscribers: 1339441 },
-        { date: "14 Mar 2010", subscribers: 1350091 },
-        { date: "21 Mar 2010", subscribers: 1363516 },
-        { date: "28 Mar 2010", subscribers: 1379005 },
-        { date: "04 Apr 2010", subscribers: 1396502 },
-        { date: "11 Apr 2010", subscribers: 1412765 },
-        { date: "18 Apr 2010", subscribers: 1426915 },
-        { date: "25 Apr 2010", subscribers: 1441097 },
-        { date: "02 May 2010", subscribers: 1455660 },
-        { date: "09 May 2010", subscribers: 1469848 },
-        { date: "16 May 2010", subscribers: 1483686 },
-        { date: "23 May 2010", subscribers: 1498843 },
-        { date: "30 May 2010", subscribers: 1518772 },
-        { date: "06 Jun 2010", subscribers: 1538428 },
-        { date: "13 Jun 2010", subscribers: 1559246 },
-        { date: "20 Jun 2010", subscribers: 1574055 },
-        { date: "27 Jun 2010", subscribers: 1589966 },
-        { date: "04 Jul 2010", subscribers: 1604912 },
-        { date: "11 Jul 2010", subscribers: 1622224 },
-        { date: "18 Jul 2010", subscribers: 1641369 },
-        { date: "25 Jul 2010", subscribers: 1662280 },
-        { date: "01 Aug 2010", subscribers: 1690772 },
+        { date: "31 Dec 2006", subscribers: 37952 },{ date: "07 Jan 2007", subscribers: 39846 },
+{ date: "14 Jan 2007", subscribers: 41952 },
+{ date: "21 Jan 2007", subscribers: 44135 },
+{ date: "28 Jan 2007", subscribers: 47392 },
+{ date: "04 Feb 2007", subscribers: 50312 },
+{ date: "11 Feb 2007", subscribers: 53789 },
+{ date: "18 Feb 2007", subscribers: 55982 },
+{ date: "25 Feb 2007", subscribers: 58681 },
+{ date: "04 Mar 2007", subscribers: 61504 },
+{ date: "11 Mar 2007", subscribers: 64051 },
+{ date: "18 Mar 2007", subscribers: 66334 },
+{ date: "25 Mar 2007", subscribers: 70625 },
+{ date: "01 Apr 2007", subscribers: 74453 },
+{ date: "08 Apr 2007", subscribers: 79142 },
+{ date: "15 Apr 2007", subscribers: 85645 },
+{ date: "22 Apr 2007", subscribers: 89458 },
+{ date: "29 Apr 2007", subscribers: 93086 },
+{ date: "06 May 2007", subscribers: 96155 },
+{ date: "13 May 2007", subscribers: 99697 },
+{ date: "20 May 2007", subscribers: 103336 },
+{ date: "27 May 2007", subscribers: 106550 },
+{ date: "03 Jun 2007", subscribers: 111900 },
+{ date: "10 Jun 2007", subscribers: 116287 },
+{ date: "17 Jun 2007", subscribers: 120317 },
+{ date: "24 Jun 2007", subscribers: 124172 },
+{ date: "01 Jul 2007", subscribers: 127579 },
+{ date: "08 Jul 2007", subscribers: 130955 },
+{ date: "15 Jul 2007", subscribers: 137175 },
+{ date: "22 Jul 2007", subscribers: 142007 },
+{ date: "29 Jul 2007", subscribers: 145443 },
+{ date: "05 Aug 2007", subscribers: 149025 },
+{ date: "12 Aug 2007", subscribers: 152422 },
+{ date: "19 Aug 2007", subscribers: 155318 },
+{ date: "26 Aug 2007", subscribers: 158467 },
+{ date: "02 Sep 2007", subscribers: 161972 },
+{ date: "09 Sep 2007", subscribers: 164993 },
+{ date: "16 Sep 2007", subscribers: 167680 },
+{ date: "23 Sep 2007", subscribers: 170490 },
+{ date: "30 Sep 2007", subscribers: 173463 },
+{ date: "07 Oct 2007", subscribers: 175882 },
+{ date: "14 Oct 2007", subscribers: 178091 },
+{ date: "21 Oct 2007", subscribers: 180986 },
+{ date: "28 Oct 2007", subscribers: 183810 },
+{ date: "04 Nov 2007", subscribers: 187038 },
+{ date: "11 Nov 2007", subscribers: 190257 },
+{ date: "18 Nov 2007", subscribers: 194050 },
+{ date: "25 Nov 2007", subscribers: 198435 },
+{ date: "02 Dec 2007", subscribers: 202199 },
+{ date: "09 Dec 2007", subscribers: 205932 },
+{ date: "16 Dec 2007", subscribers: 210351 },
+{ date: "23 Dec 2007", subscribers: 214565 },
+{ date: "30 Dec 2007", subscribers: 218629 },
+{ date: "06 Jan 2008", subscribers: 222465 },
+{ date: "13 Jan 2008", subscribers: 228439 },
+{ date: "20 Jan 2008", subscribers: 234158 },
+{ date: "27 Jan 2008", subscribers: 239207 },
+{ date: "03 Feb 2008", subscribers: 245938 },
+{ date: "10 Feb 2008", subscribers: 253098 },
+{ date: "17 Feb 2008", subscribers: 258597 },
+{ date: "24 Feb 2008", subscribers: 267787 },
+{ date: "02 Mar 2008", subscribers: 273721 },
+{ date: "09 Mar 2008", subscribers: 282161 },
+{ date: "16 Mar 2008", subscribers: 289598 },
+{ date: "23 Mar 2008", subscribers: 296671 },
+{ date: "30 Mar 2008", subscribers: 307591 },
+{ date: "06 Apr 2008", subscribers: 315532 },
+{ date: "13 Apr 2008", subscribers: 323900 },
+{ date: "20 Apr 2008", subscribers: 332356 },
+{ date: "27 Apr 2008", subscribers: 340922 },
+{ date: "04 May 2008", subscribers: 347752 },
+{ date: "11 May 2008", subscribers: 357357 },
+{ date: "18 May 2008", subscribers: 365207 },
+{ date: "25 May 2008", subscribers: 369795 },
+{ date: "01 Jun 2008", subscribers: 378079 },
+{ date: "08 Jun 2008", subscribers: 385024 },
+{ date: "15 Jun 2008", subscribers: 392289 },
+{ date: "22 Jun 2008", subscribers: 401278 },
+{ date: "29 Jun 2008", subscribers: 410731 },
+{ date: "06 Jul 2008", subscribers: 419493 },
+{ date: "13 Jul 2008", subscribers: 427451 },
+{ date: "20 Jul 2008", subscribers: 435201 },
+{ date: "27 Jul 2008", subscribers: 445113 },
+{ date: "03 Aug 2008", subscribers: 458042 },
+{ date: "10 Aug 2008", subscribers: 468566 },
+{ date: "17 Aug 2008", subscribers: 477262 },
+{ date: "24 Aug 2008", subscribers: 489326 },
+{ date: "31 Aug 2008", subscribers: 499568 },
+{ date: "07 Sep 2008", subscribers: 508224 },
+{ date: "14 Sep 2008", subscribers: 515384 },
+{ date: "21 Sep 2008", subscribers: 525282 },
+{ date: "28 Sep 2008", subscribers: 538235 },
+{ date: "05 Oct 2008", subscribers: 549947 },
+{ date: "12 Oct 2008", subscribers: 563034 },
+{ date: "19 Oct 2008", subscribers: 571657 },
+{ date: "26 Oct 2008", subscribers: 578805 },
+{ date: "02 Nov 2008", subscribers: 585133 },
+{ date: "09 Nov 2008", subscribers: 591851 },
+{ date: "16 Nov 2008", subscribers: 597936 },
+{ date: "23 Nov 2008", subscribers: 606003 },
+{ date: "30 Nov 2008", subscribers: 616225 },
+{ date: "07 Dec 2008", subscribers: 623554 },
+{ date: "14 Dec 2008", subscribers: 632807 },
+{ date: "21 Dec 2008", subscribers: 643995 },
+{ date: "28 Dec 2008", subscribers: 655110 },
+{ date: "04 Jan 2009", subscribers: 666965 },
+{ date: "11 Jan 2009", subscribers: 674102 },
+{ date: "18 Jan 2009", subscribers: 682124 },
+{ date: "25 Jan 2009", subscribers: 691997 },
+{ date: "01 Feb 2009", subscribers: 699033 },
+{ date: "08 Feb 2009", subscribers: 706206 },
+{ date: "15 Feb 2009", subscribers: 713268 },
+{ date: "22 Feb 2009", subscribers: 721939 },
+{ date: "01 Mar 2009", subscribers: 732659 },
+{ date: "08 Mar 2009", subscribers: 739629 },
+{ date: "15 Mar 2009", subscribers: 748514 },
+{ date: "22 Mar 2009", subscribers: 757233 },
+{ date: "29 Mar 2009", subscribers: 764646 },
+{ date: "05 Apr 2009", subscribers: 772619 },
+{ date: "12 Apr 2009", subscribers: 781182 },
+{ date: "19 Apr 2009", subscribers: 791380 },
+{ date: "26 Apr 2009", subscribers: 800510 },
+{ date: "03 May 2009", subscribers: 809625 },
+{ date: "10 May 2009", subscribers: 816094 },
+{ date: "17 May 2009", subscribers: 826240 },
+{ date: "24 May 2009", subscribers: 832704 },
+{ date: "31 May 2009", subscribers: 839989 },
+{ date: "07 Jun 2009", subscribers: 849677 },
+{ date: "14 Jun 2009", subscribers: 863450 },
+{ date: "21 Jun 2009", subscribers: 874947 },
+{ date: "28 Jun 2009", subscribers: 886304 },
+{ date: "05 Jul 2009", subscribers: 897632 },
+{ date: "12 Jul 2009", subscribers: 903503 },
+{ date: "19 Jul 2009", subscribers: 921709 },
+{ date: "26 Jul 2009", subscribers: 931565 },
+{ date: "02 Aug 2009", subscribers: 943059 },
+{ date: "09 Aug 2009", subscribers: 953483 },
+{ date: "16 Aug 2009", subscribers: 965124 },
+{ date: "23 Aug 2009", subscribers: 991607 },
+{ date: "30 Aug 2009", subscribers: 1015558 },
+{ date: "06 Sep 2009", subscribers: 1038030 },
+{ date: "13 Sep 2009", subscribers: 1054333 },
+{ date: "20 Sep 2009", subscribers: 1066052 },
+{ date: "27 Sep 2009", subscribers: 1076736 },
+{ date: "04 Oct 2009", subscribers: 1088062 },
+{ date: "11 Oct 2009", subscribers: 1097431 },
+{ date: "18 Oct 2009", subscribers: 1109471 },
+{ date: "25 Oct 2009", subscribers: 1117688 },
+{ date: "01 Nov 2009", subscribers: 1128999 },
+{ date: "08 Nov 2009", subscribers: 1137615 },
+{ date: "15 Nov 2009", subscribers: 1146686 },
+{ date: "22 Nov 2009", subscribers: 1156919 },
+{ date: "29 Nov 2009", subscribers: 1166165 },
+{ date: "06 Dec 2009", subscribers: 1175524 },
+{ date: "13 Dec 2009", subscribers: 1184934 },
+{ date: "20 Dec 2009", subscribers: 1200939 },
+{ date: "27 Dec 2009", subscribers: 1215599 },
+{ date: "03 Jan 2010", subscribers: 1232721 },
+{ date: "10 Jan 2010", subscribers: 1243221 },
+{ date: "17 Jan 2010", subscribers: 1256200 },
+{ date: "24 Jan 2010", subscribers: 1271856 },
+{ date: "31 Jan 2010", subscribers: 1282313 },
+{ date: "07 Feb 2010", subscribers: 1294622 },
+{ date: "14 Feb 2010", subscribers: 1305304 },
+{ date: "21 Feb 2010", subscribers: 1316465 },
+{ date: "28 Feb 2010", subscribers: 1329122 },
+{ date: "07 Mar 2010", subscribers: 1339404 },
+{ date: "14 Mar 2010", subscribers: 1350686 },
+{ date: "21 Mar 2010", subscribers: 1363621 },
+{ date: "28 Mar 2010", subscribers: 1378489 },
+{ date: "04 Apr 2010", subscribers: 1396378 },
+{ date: "11 Apr 2010", subscribers: 1412858 },
+{ date: "18 Apr 2010", subscribers: 1426072 },
+{ date: "25 Apr 2010", subscribers: 1441714 },
+{ date: "02 May 2010", subscribers: 1456139 },
+{ date: "09 May 2010", subscribers: 1469163 },
+{ date: "16 May 2010", subscribers: 1483757 },
+{ date: "23 May 2010", subscribers: 1497900 },
+{ date: "30 May 2010", subscribers: 1519654 },
+{ date: "06 Jun 2010", subscribers: 1538636 },
+{ date: "13 Jun 2010", subscribers: 1560038 },
+{ date: "20 Jun 2010", subscribers: 1573460 },
+{ date: "27 Jun 2010", subscribers: 1590333 },
+{ date: "04 Jul 2010", subscribers: 1605510 },
+{ date: "11 Jul 2010", subscribers: 1622197 },
+{ date: "18 Jul 2010", subscribers: 1641600 },
+{ date: "25 Jul 2010", subscribers: 1662382 },
+{ date: "01 Aug 2010", subscribers: 1690128 }
+
       ];
 
       function populateTable() {
