--- a/data/wantlieswiththat.html
+++ b/data/wantlieswiththat.html
@@ -47,25 +47,11 @@
 
     <script>
       const data = [
-        { date: "24 Sep 2006", subscribers: 1 },
-        { date: "01 Oct 2006", subscribers: 1 },
-        { date: "08 Oct 2006", subscribers: 1 },
-        { date: "15 Oct 2006", subscribers: 1 },
-        { date: "22 Oct 2006", subscribers: 3 },
-        { date: "29 Oct 2006", subscribers: 17 },
-        { date: "05 Nov 2006", subscribers: 144 },
-        { date: "12 Nov 2006", subscribers: 1230 },
-        { date: "19 Nov 2006", subscribers: 6756 },
-        { date: "26 Nov 2006", subscribers: 13000 },
-        { date: "03 Dec 2006", subscribers: 16500 },
-        { date: "10 Dec 2006", subscribers: 16607 },
-        { date: "17 Dec 2006", subscribers: 16607 },
-        { date: "24 Dec 2006", subscribers: 16602 },
-        { date: "31 Dec 2006", subscribers: 16602 },
-        { date: "07 Jan 2007", subscribers: 16603 },
-        { date: "14 Jan 2007", subscribers: 16602 },
-        { date: "21 Jan 2007", subscribers: 16601 },
-        { date: "28 Jan 2007", subscribers: 16596 }
+        { date: "01 Sep 2006", subscribers: 0, rank: "N/A" },
+        { date: "01 Oct 2006", subscribers: 1, rank: "N/A" },
+        { date: "01 Nov 2006", subscribers: 50, rank: "N/A" },
+        { date: "01 Dec 2006", subscribers: 16308, rank: "#14" },
+        { date: "01 Jan 2007", subscribers: 16602, rank: "#16" },
       ];
 
       function populateTable() {
