--- a/data/wantlieswiththat.html
+++ b/data/wantlieswiththat.html
@@ -32,6 +32,7 @@
               <tr>
                 <th>Date</th>
                 <th>Subscribers</th>
+                <th>Rank</th>
               </tr>
             </thead>
             <tbody></tbody>
