--- a/data/wantlieswiththat.html
+++ b/data/wantlieswiththat.html
@@ -21,7 +21,7 @@
     <main class="content">
       <section class="hero">
         <h1>wantlieswiththat Subscriber Growth</h1>
-        <p>Tracking data since <strong>24 Sep 2006</strong>.</p>
+        <p>Tracking data since <strong>Sep 2006</strong>.</p>
       </section>
 
       <section class="data-section">
