--- a/data/wantlieswiththat.html
+++ b/data/wantlieswiththat.html
@@ -66,6 +66,7 @@
           tr.innerHTML = `<td>${
             row.date
           }</td><td>${row.subscribers.toLocaleString()}</td>`;
+           <td>${row.rank}</td>;
           tableBody.appendChild(tr);
         });
       }
