Added 1h refresh to ensure accurate informatiin

--- a/top/20y/viewedvideos.html
+++ b/top/20y/viewedvideos.html
@@ -189,6 +189,8 @@
   renderUsers();
   setInterval(updateVideos, 1000); // update every second
 </script>
-
+<script>
+  setTimeout(() => location.reload(), 3600000);
+</script>
 </body>
 </html>
