Change label position on bars

--- a/testing/20yearsbarchart.html
+++ b/testing/20yearsbarchart.html
@@ -49,7 +49,7 @@
     }
     .bar {
       display: flex;
-      align-items: center;
+      align-items: right;
       position: relative;
       height: 50px;
     }
