--- a/testing/20yearsbarchart.html
+++ b/testing/20yearsbarchart.html
@@ -73,7 +73,7 @@
     .bar-inner {
       height: 100%;
       display: flex;
-      align-items: center;
+      align-items: right;
       justify-content: center;
       font-weight: bold;
       font-size: 20px;
