--- a/testing/pewdiepie.html
+++ b/testing/pewdiepie.html
@@ -13,7 +13,7 @@
     }
     .odometer {
       font-size: 48px;
-      color: #cc0000;
+      color: #000000;
       margin-bottom: 30px;
     }
     table {
