--- a/testing/pewdiepie.html
+++ b/testing/pewdiepie.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-  <h1>PewDiePie's Live Sub Estimate + Timed Video Boost</h1>
+  <h1>PewDiePie</h1>
   <div id="odometer" class="odometer">0</div>
 
   <button onclick="downloadCSV()">Download CSV</button>
